k8s/services/matrix/app/maubot/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maubot
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsUser: 1337
        runAsGroup: 1337
        fsGroup: 1337
      containers:
        - name: maubot
          image: dock.mau.dev/maubot/maubot
          command:
            - python3
            - -m
            - maubot
            - -c
            - /config/config.yaml
          ports:
            - name: http
              containerPort: 29316
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: data
              mountPath: /data
      volumes:
        - name: config
          secret:
            secretName: maubot-config
        - name: data
          persistentVolumeClaim:
            claimName: maubot-data
