k8s/services/matrix/app/maubot/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: maubot
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
