k8s/services/matrix/app/maubot/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maubot
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - matrix.lama-corp.space
  rules:
    - matches:
        - path:
            value: /_matrix/maubot
      backendRefs:
        - name: maubot
          port: 80
