k8s/services/matrix/app/maubot/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maubot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: matrix.lama-corp.space
      http:
        paths:
          - path: /_matrix/maubot
            pathType: ImplementationSpecific
            backend:
              service:
                name: maubot
                port:
                  name: http
  tls:
    - hosts:
        - matrix.lama-corp.space
      secretName: maubot-tls
